lang/tests/contract/common/ui/fail/40-invalid-ABI-specification.stderr
error: ABI should be specified  as `"liquid"` or `"solidity"`
 --> $DIR/40-invalid-ABI-specification.rs:5:5
  |
5 |     extern "C" {
  |     ^^^^^^^^^^
